--- a/public/board.css
+++ b/public/board.css
@@ -69,7 +69,9 @@ td{
   margin: auto;
   background-color: red;
   border-radius: 50%;
-  
+}
+.red:active{
+  background-color: rgba(171, 3, 9, 0.7);
 }
 .black {
   height: 30px;
@@ -77,6 +79,9 @@ td{
   margin: auto;
   background-color: black;
   border-radius: 50%;
+}
+.black:active{
+  background-color: rgba(0,0,0, 0.7);
 }
 .loader {
   border: 16px solid #f3f3f3;
